--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodekb",
   "version": "1.0.0",
-  "description": "Simple knowledgebase app",
+  "description": "Image annotation platform for the Leaf Project",
   "main": "app.js",
   "scripts": {
     "start": "node app"
